--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,8 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Deploy to Vercel
-        uses: vercel/actions/github/deploy@v1
+        uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_SECRET}}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           working-directory: ./  
           args: --prod         
