--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Deploy to Vercel
         uses: amondnet/vercel-action@v25
         with:
-          vercel-token: ${{ secrets.VERCEL_SECRET}}
-          working-directory: ./  
-          args: --prod --yes        
+          vercel-token: ${{ secrets.VERCEL_SECRET }}
+          working-directory: ./
+          vercel-args: --prod --yes  # Correct input for Vercel CLI arguments
