--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,4 +18,4 @@ jobs:
         with:
           vercel-token: ${{ secrets.VERCEL_SECRET }}
           working-directory: ./
-          vercel-args: --prod --yes  
+          vercel-args: --prod 
